# LNG-Market-Topology

./: .gitignore  README.md  case_study_narrative.md  prediction_scorecard.md  pyproject.toml  requirements.txt
Narrative/: LNG船航线成本对比分析.md  narrative_framework.md  巴拿马运河干旱限行数据分析.md  巴拿马运河限航下的亚洲能源供应.md  搜索LNG市场事后验证数据.md  能源企业采购与供应分析.md
config/: players.yaml  routes.yaml  terminals.yaml
config/scenarios/: hormuz_closure.yaml  panama_drought.yaml
src/: __init__.py  data_models.py
src/constraint/: state_calendar.py  topology_graph.py  vulnerability_matrix.py
src/inference/: bayesian_attr_model.py
src/signal/: deviation_detector.py  rational_baseline.py  shadow_price_engine.py
tests/: test_state_calendar.py  test_topology_graph.py  test_vulnerability_matrix.py
